# Kai-Coin

./: Block.cpp  Block.h  Blockchain.cpp  Blockchain.h  CMakeLists.txt  Node.cpp  Node.h  README.md  Transaction.cpp  Transaction.h  Wallet.cpp  Wallet.h  main.cpp
